--- a/index.html
+++ b/index.html
@@ -5,9 +5,121 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="asset/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/100c481b19.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Flexbox</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="items1">
+            <ul class="list">
+                <li class="list-item">
+                  <div class="list-item__image">
+                    <img src="asset/img/maria.jpg" class="contacto-gral" alt="Imagen de Contacto">
+                  </div>
+                  <div class="list-item__content">
+                    <h5><b>Maria</b></h5>
+                    <p>Activo Ahora</p>
+                  </div>
+                  <div class="icon">
+                    <i class="fa-regular fa-message"></i>
+                    <i class="fa-solid fa-bars"></i>
+                    </div>
+                </li>
+                    <hr>
+                        <div class="boton" aria-label="Basic example">
+                            <button type="button" class="btn btn-primary">Nuevo Chat</button>
+                        </div> 
+                    <hr>
+                <li class="list-item">
+                    <div class="list-item__image">
+                      <img src="asset/img/Juana.jpg" class="contacto-gral" alt="Imagen de Contacto">
+                    </div>
+                    <div class="list-item__content">
+                      <h5><b>Juanita</b></h5>
+                      <p>Generando Conversaciones</p>
+                    </div>
+                </li>
+                  <hr>
+                <li class="list-item">
+                  <div class="list-item__image">
+                    <img src="asset/img/Screen Shot 2018-11-28 at 15.28.04.jpg" class="contacto-gral" alt="Imagen de Contacto">
+                  </div>
+                  <div class="list-item__content">
+                    <h5><b>Juanita</b></h5>
+                    <p>Generando Conversaciones</p>
+                  </div>
+                </li>
+                    <hr>
+                <li class="list-item">
+                <div class="list-item__image">
+                    <img src="asset/img/Screen Shot 2018-11-28 at 15.28.30.jpg" class="contacto-gral" alt="Imagen de Contacto">
+                  </div>
+                  <div class="list-item__content">
+                    <h5><b>Juanita</b></h5>
+                    <p>Generando Conversaciones</p>
+                  </div>
+                </li>
+                <hr>
+                <li class="list-item">
+                <div class="list-item__image">
+                    <img src="asset/img/Screen Shot 2018-11-28 at 15.30.34.jpg" class="contacto-gral" alt="Imagen de Contacto">
+                  </div>
+                  <div class="list-item__content">
+                    <h5><b>Juanita</b></h5>
+                    <p>Generando Conversaciones</p>
+                  </div>
+                </li>
+                <hr>
+                <li class="list-item">
+                <div class="list-item__image">
+                    <img src="asset/img/Screen Shot 2018-11-28 at 15.30.54.jpg" class="contacto-gral" alt="Imagen de Contacto">
+                  </div>
+                  <div class="list-item__content">
+                    <h5><b>Juanita</b></h5>
+                    <p>Generando Conversaciones</p>
+                  </div>
+                </li>
+                <hr>
+                <li class="list-item">
+                <div class="list-item__image">
+                    <img src="asset/img/Screen Shot 2018-11-28 at 15.31.09.jpg" class="contacto-gral" alt="Imagen de Contacto">
+                  </div>
+                  <div class="list-item__content">
+                    <h5><b>Juanita</b></h5>
+                    <p>Generando Conversaciones</p>
+                  </div>
+                </li>
+                <hr>
+                <li class="list-item">
+                <div class="list-item__image">
+                    <img src="asset/img/Screen Shot 2018-11-28 at 15.32.16.jpg" class="contacto-gral" alt="Imagen de Contacto">
+                  </div>
+                  <div class="list-item__content">
+                    <h5><b>Juanita</b></h5>
+                    <p>Generando Conversaciones</p>
+                  </div>
+                </li>
+                <hr>
+                <li class="list-item">
+                <div class="list-item__image">
+                    <img src="asset/img/Screen Shot 2018-11-28 at 15.32.44.jpg" class="contacto-gral" alt="Imagen de Contacto">
+                  </div>
+                  <div class="list-item__content">
+                    <h5><b>Juanita</b></h5>
+                    <p>Generando Conversaciones</p>
+                  </div>
+                </li>
+            </ul>
+        </div>
+        <div class="items2">
+            <img src="asset/img/hand.png" class="img-prin" alt="Imagen Principal">
+        </div><!--Finaliza Contenedor Contactos-->
+            <h5><b>Juanita</b></h5><br>
+            <p>Generando Conversaciones</p>
+    </div>
 </body>
 </html>
