Finalizacion del Desafio

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Flexbox</title>
 </head>
 <body>
-    <div class="container">
-        <div class="items1">
+    <div class="container"><!--Contenedor Principal-->
+        <div class="items1"><!--Items 1 Menu Contactos-->
             <ul class="list">
                 <li class="list-item">
                   <div class="list-item__image">
@@ -22,7 +22,7 @@
                   </div>
                   <div class="list-item__content">
                     <h5><b>Maria</b></h5>
-                    <p>Activo Ahora</p>
+                    <p class="activo"> Activo Ahora</p>
                   </div>
                   <div class="icon">
                     <i class="fa-regular fa-message"></i>
@@ -40,7 +40,7 @@
                     </div>
                     <div class="list-item__content">
                       <h5><b>Juanita</b></h5>
-                      <p>Generando Conversaciones</p>
+                      <p>Mensaje Env.</p>
                     </div>
                 </li>
                   <hr>
@@ -49,8 +49,8 @@
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.28.04.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
-                    <h5><b>Juanita</b></h5>
-                    <p>Generando Conversaciones</p>
+                    <h5><b>Magdalena</b></h5>
+                    <p>1 Conversación</p>
                   </div>
                 </li>
                     <hr>
@@ -59,8 +59,8 @@
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.28.30.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
-                    <h5><b>Juanita</b></h5>
-                    <p>Generando Conversaciones</p>
+                    <h5><b>Cristiam</b></h5>
+                    <p>Escribiendo</p>
                   </div>
                 </li>
                 <hr>
@@ -69,8 +69,8 @@
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.30.34.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
-                    <h5><b>Juanita</b></h5>
-                    <p>Generando Conversaciones</p>
+                    <h5><b>Ignacio</b></h5>
+                    <p>1 Mens. sin leer</p>
                   </div>
                 </li>
                 <hr>
@@ -79,8 +79,8 @@
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.30.54.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
-                    <h5><b>Juanita</b></h5>
-                    <p>Generando Conversaciones</p>
+                    <h5><b>Juan Pablo</b></h5>
+                    <p>Escribiendo</p>
                   </div>
                 </li>
                 <hr>
@@ -89,8 +89,8 @@
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.31.09.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
-                    <h5><b>Juanita</b></h5>
-                    <p>Generando Conversaciones</p>
+                    <h5><b>Gonzalo</b></h5>
+                    <p>Mens. Borrado</p>
                   </div>
                 </li>
                 <hr>
@@ -99,8 +99,8 @@
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.32.16.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
-                    <h5><b>Juanita</b></h5>
-                    <p>Generando Conversaciones</p>
+                    <h5><b>Alberto</b></h5>
+                    <p>En Linea</p>
                   </div>
                 </li>
                 <hr>
@@ -109,17 +109,21 @@
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.32.44.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
-                    <h5><b>Juanita</b></h5>
-                    <p>Generando Conversaciones</p>
+                    <h5><b>María Jose</b></h5>
+                    <p>Conectada</p>
                   </div>
                 </li>
             </ul>
-        </div>
-        <div class="items2">
-            <img src="asset/img/hand.png" class="img-prin" alt="Imagen Principal">
         </div><!--Finaliza Contenedor Contactos-->
-            <h5><b>Juanita</b></h5><br>
-            <p>Generando Conversaciones</p>
+        <div class="items2">
+          <div class="container-fluid" >
+              <img src="asset/img/hand.png" width="50%" class="img-prin" alt="Imagen Principal">
+              <div class="text">
+                <h1><b>Comienza el  Nertworking</b></h1>
+                <p>Presiona el boton "Nuevo Chat" para comenzar a crear nuevas <br> redes de contacto para tu empresa o emprendimiento.</p>
+              </div>
+          </div>
+        </div>
     </div>
 </body>
 </html>
