--- a/index.html
+++ b/index.html
@@ -9,30 +9,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/100c481b19.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Flexbox</title>
 </head>
-<body>
-    <div class="container"><!--Contenedor Principal-->
-        <div class="items1"><!--Items 1 Menu Contactos-->
-            <ul class="list">
-                <li class="list-item">
-                  <div class="list-item__image">
-                    <img src="asset/img/maria.jpg" class="contacto-gral" alt="Imagen de Contacto">
-                  </div>
-                  <div class="list-item__content">
-                    <h5><b>Maria</b></h5>
-                    <p class="activo"> Activo Ahora</p>
-                  </div>
-                  <div class="icon">
-                    <i class="fa-regular fa-message"></i>
-                    <i class="fa-solid fa-bars"></i>
-                    </div>
-                </li>
-                    <hr>
-                        <div class="boton" aria-label="Basic example">
-                            <button type="button" class="btn btn-primary">Nuevo Chat</button>
-                        </div> 
+  <body>
+    <div class="gral">
+      <div class="container_fluid"><!--contenedor 1-->
+        <div class="list-contac"><!--contenedor item principal-->
+          <div class="list_img">
+            <img src="asset/img/maria.jpg" class="contacto-gral" alt="Imagen de Contacto">
+          </div>
+          <div class="nombre">
+            <h4><b>Maria</b></h4>
+            <p class="activo"> Activo Ahora</p>
+          </div>
+          <div class="icon">
+            <i class="fa-regular fa-message"></i>
+            <i class="fa-solid fa-bars"></i>
+          </div>
+        </div><!-- cierre lista contenedor item principal-->
+            <ul class="list"><!--contenedor lista demas contactos-->
+                  <hr>
+                    <div class="boton" aria-label="Basic example">
+                      <button class="btn" type="button">Nuevo Chat</button>
+                    </div> 
                     <hr>
                 <li class="list-item">
                     <div class="list-item__image">
@@ -53,9 +52,9 @@
                     <p>1 Conversación</p>
                   </div>
                 </li>
-                    <hr>
+                  <hr>
                 <li class="list-item">
-                <div class="list-item__image">
+                  <div class="list-item__image">
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.28.30.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
@@ -63,9 +62,9 @@
                     <p>Escribiendo</p>
                   </div>
                 </li>
-                <hr>
+                  <hr>
                 <li class="list-item">
-                <div class="list-item__image">
+                  <div class="list-item__image">
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.30.34.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
@@ -75,7 +74,7 @@
                 </li>
                 <hr>
                 <li class="list-item">
-                <div class="list-item__image">
+                  <div class="list-item__image">
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.30.54.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
@@ -85,7 +84,7 @@
                 </li>
                 <hr>
                 <li class="list-item">
-                <div class="list-item__image">
+                  <div class="list-item__image">
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.31.09.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
@@ -95,7 +94,7 @@
                 </li>
                 <hr>
                 <li class="list-item">
-                <div class="list-item__image">
+                  <div class="list-item__image">
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.32.16.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
@@ -105,7 +104,7 @@
                 </li>
                 <hr>
                 <li class="list-item">
-                <div class="list-item__image">
+                  <div class="list-item__image">
                     <img src="asset/img/Screen Shot 2018-11-28 at 15.32.44.jpg" class="contacto-gral" alt="Imagen de Contacto">
                   </div>
                   <div class="list-item__content">
@@ -114,16 +113,14 @@
                   </div>
                 </li>
             </ul>
-        </div><!--Finaliza Contenedor Contactos-->
-        <div class="items2">
-          <div class="container-fluid" >
-              <img src="asset/img/hand.png" width="50%" class="img-prin" alt="Imagen Principal">
-              <div class="text">
-                <h1><b>Comienza el  Nertworking</b></h1>
-                <p>Presiona el boton "Nuevo Chat" para comenzar a crear nuevas <br> redes de contacto para tu empresa o emprendimiento.</p>
-              </div>
+      </div><!--Finaliza Contenedor Contactos-->
+      <div class="container_fluid2"><!--contenedor 2-->
+        <img src="asset/img/hand.png" width="30%" class="img-prin" alt="Imagen Principal">
+          <div class="text">
+            <h1><b>Comienza el  Nertworking</b></h1>
+              <p>Presiona el boton "Nuevo Chat" para comenzar a crear nuevas <br> redes de contacto para tu empresa o emprendimiento.</p>
           </div>
-        </div>
-    </div>
-</body>
+      </div>
+    </div><!--Finaliza el contenedor principal-->
+  </body>
 </html>
